# gb.automation.smoketests.sudoku.poc

./: .dockerignore  .gitattributes  .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  DECISION_REGISTER.md  LICENSE  NAMING_CONVENTIONS.md  README.md  decision-register.md  docker-compose.yml
.batch/: check-memory-key-parity.ps1  check-ra-header-currency.ps1  check-step-text-parity.ps1  generate-feature-parity-report.ps1  run-demoapp001.ps1  run-parity-checks.ps1  run-performance-benchmarks.ps1  run_solver_and_capture_output.bat
.claude/: settings.json  settings.local.json
.review/: README.md
DOCS/: ALGORITHM_Sudoku_Advanced_Solver.md  (+18 more)
demo-apps/demoapp002-python-pytest/: .dockerignore  Dockerfile  README.md  pyproject.toml
demo-apps/demoapp002-python-pytest/app_src/: __init__.py  audit.py  constants.py  puzzle_loader.py  sudoku_orchestrator.py  sudoku_solver.py
demo-apps/demoapp002-python-pytest/tests/features/: BasicSudokuSolverLogic.feature
demo-apps/demoapp002-python-pytest/tests/screenplay/abilities/: __init__.py  load_puzzles.py  use_sudoku_solver.py
demo-apps/demoapp002-python-pytest/tests/screenplay/fixtures/: grid_fixtures.py
demo-apps/demoapp002-python-pytest/tests/screenplay/questions/: __init__.py
demo-apps/demoapp002-python-pytest/tests/screenplay/step_definitions/: test_basic_sudoku_solver_logic.py
demo-apps/demoapp002-python-pytest/tests/screenplay/support/: actor.py  actors.py  memory_keys.py
demo-apps/demoapp002-python-pytest/tests/screenplay/tasks/: __init__.py
demo-apps/demoapp002-python-pytest/tooling/performance/: benchmark.py
(+408 files in other folders)
